# claude_web

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  claudesdk_integration.md  config.example.yaml  docker-compose.yml  package-lock.json  pyproject.toml  start.sh  stop.sh
docs/adr/: ADR-001-platform-strategy.md  ADR-002-technical-architecture.md  ADR-003-multi-step-reasoning-ux.md
docs/mockups/: enhanced-tool-steps-ux.html
docs/wireframes/: architecture-diagram.html  tool-steps-ux.html
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/tests/: App.test.tsx  e2e-tool-steps.test.tsx  setup.ts
src/: main.py
src/core/: config.py  exceptions.py  extension_loader.py  llm_provider.py  logging_config.py  models.py  options_builder.py  prewarm_pool.py  prompt_expander.py  provider_factory.py  sdk_client.py  session_index.py  session_manager.py  subprocess_monitor.py
task_core-engine/plan/: alignment-report.md  decision-log.md  status.md
task_core-engine/specs/: business-case.md  edge-case-resolutions.md  feature-spec.md  user-stories.md
task_project_evolution/: architecture_analysis.md  architecture_review.md  enhanced_architecture.md  integration_research.md  structure_plan.md
tests/: conftest.py
tests/e2e/: conftest.py  test_edge_cases.py  test_rest_api.py  test_startup.py
tests/integration/: test_health.py  test_openai_endpoint.py  test_rest_api.py  test_startup.py
tests/qa/: test_api_contracts.py
tests/unit/: test_config.py  test_extension_loader.py  test_litellm_provider.py  (+7 more)
(+44 files in other folders)
